# MCP-Launchpad

./: CONTRIBUTING.md  README.md
.github/workflows/: test.yml
mcp_servers/: PRIORITY_IMPLEMENTATION_PLAN.md  TESTING_GUIDELINES.md
mcp_servers/filesystem_mcp/: Dockerfile  README.md  requirements.txt
mcp_servers/filesystem_mcp/src/: main.py
mcp_servers/filesystem_mcp/tests/: conftest.py  test_api.py
mcp_servers/github_mcp/: .dockerignore  Dockerfile  README.md  requirements.txt
mcp_servers/github_mcp/src/: main.py
mcp_servers/github_mcp/tests/: conftest.py  test_api.py
mcp_servers/memory_storage_mcp/: .gitignore  Dockerfile  README.md  app.py  ci_tests.py  docker-compose.yml  manage_test_data.py  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
mcp_servers/memory_storage_mcp/config/: default_config.yaml
mcp_servers/memory_storage_mcp/scripts/: docker_tests.sh  init_demo_data.py  run_tests.sh
mcp_servers/memory_storage_mcp/tests/: README.md  test_api.py  test_backup.py  test_config.py  test_docker_integration.py  test_models.py  test_utils.py
mcp_servers/playwright_mcp/: .dockerignore  Dockerfile  README.md  requirements.txt
mcp_servers/playwright_mcp/src/: main.py  mcp_tools.py  models.py
mcp_servers/playwright_mcp/tests/: conftest.py  test_api.py
mcp_servers/templates/: Dockerfile.template  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  README.md  SERVER_SELECTION_CRITERIA.md  SERVER_TEMPLATE.md  conftest.py  docker-compose.yml.template  requirements-dev.txt  test_docker_integration.py  tests_README.md
mcp_servers/templates/config/: default.json.template
mcp_servers/templates/src/: app.py.template
mcp_servers/text_editor_mcp/: Dockerfile  LICENSE  README.md  pyproject.toml
mcp_servers/text_editor_mcp/src/mcp_text_editor_launchpad_adapter/: __init__.py  models.py  server.py  service.py  text_editor.py
